Add Java 9 module export