@@ -1,3 +1,4 @@
+// Plugins
 buildscript {
     repositories {
         jcenter()
@@ -6,7 +7,6 @@ buildscript {
         classpath group: 'org.whitesource', name: 'whitesource-gradle-plugin', version: '0.8'
     }
 }
-
 plugins {
     id 'java'
     id 'com.github.johnrengelman.shadow' version '2.0.1'
@@ -14,21 +14,22 @@ plugins {
     id 'maven-publish'
     id 'com.jfrog.bintray' version '1.8.4'
 }
-
 apply plugin: 'whitesource'
 
+// Project info
 group "${theGroup}"
 version "${theVersion}"
 description = 'Official Auklet SDK for Java and other JVM languages.'
 
-sourceCompatibility = '1.8'
-targetCompatibility = '1.8'
+// Java version
+sourceCompatibility = 8
+targetCompatibility = 8
 
+// Dependencies
 repositories {
     jcenter()
     maven { url 'https://jitpack.io' }
 }
-
 dependencies {
     compile "com.squareup.okhttp3:okhttp:3.12.0"
     compile "com.squareup.okhttp3:logging-interceptor:3.12.0"
@@ -48,21 +49,46 @@ dependencies {
     testCompile "org.slf4j:slf4j-simple:1.7.25"
 }
 
+// Module export (Java 9+)
+ext.moduleName = 'io.auklet'
+sourceSets {
+    moduleInfo {
+        java {
+            srcDir 'src/module-info/java'
+        }
+    }
+}
+compileModuleInfoJava {
+    sourceCompatibility = 9
+    targetCompatibility = 9
+    inputs.property("moduleName", moduleName)
+    doFirst {
+        classpath += sourceSets.main.compileClasspath
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'ALL-SYSTEM',
+                '-d', sourceSets.main.output.classesDirs.asPath
+        ]
+    }
+}
+
+// Test configuration
 test {
     testLogging.showStandardStreams = true
 }
 
+// Packaging configurations
 task sourcesJar(type: Jar, dependsOn: classes) {
     classifier = 'sources'
     from sourceSets.main.allSource
 }
-
 task javadocJar(type: Jar, dependsOn: javadoc) {
     classifier = 'javadoc'
     from javadoc.destinationDir
 }
-
 jar {
+    from sourceSets.main.output
+    from sourceSets.moduleInfo.output
     manifest {
         attributes(
             'Built-By': 'CircleCI',
@@ -74,6 +100,7 @@ jar {
     }
 }
 
+// Deployment configurations
 def pomConfig = {
     licenses {
         license {
@@ -86,7 +113,6 @@ def pomConfig = {
        url "https://github.com/aukletio/Auklet-Agent-Java"
     }
 }
-
 publishing {
     publications {
         AukletJavaAgent(MavenPublication) {
@@ -106,7 +132,6 @@ publishing {
         }
     }
 }
-
 bintray {
     user = System.getenv('BINTRAY_USER')
     key = System.getenv('BINTRAY_API_KEY')
